--- a/page-2.html
+++ b/page-2.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}.tab{padding:7px 14px;display:inline-block;border-radius:3px;margin-right:10px;}.tab:focus{outline:none;}.tab.tab-active{background-color:#0d94e6;color:white;}.tab-container{display:inline-block;}.tab-content{animation:fadeEffect 1s;}.tab-contents{min-height:100px;padding:10px;}#ia3rvi{padding:10px;}@keyframes fadeEffect{from{opacity:0;}to{opacity:1;}}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
+* { box-sizing: border-box; } body {margin: 0;}.hamburger2{display:none;}.bar2{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}#iryk0g{height:10px;width:10px;border-radius:100%;background-color:black;}#is9une{height:10px;width:10px;border-radius:100%;background-color:black;}#i23l8j{height:10px;width:10px;border-radius:100%;background-color:black;}#ikxduw{height:80vh;}#irdrm7{height:80vh;}#i6vnw3{height:80vh;}@keyframes fadeEffect{from{opacity:0;}to{opacity:1;}}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.hamburger2{display:block;cursor:pointer;}.hamburger2.active .bar2:nth-child(2){opacity:0;}.hamburger2.active .bar2:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger2.active .bar2:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
 
 </style>
 
@@ -79,60 +79,85 @@
 		<html>
  <head></head>
  <body id="iaf8gs">
-  <div id="ia3rvi">
-   Insert your text here
+  <div data-gjs-type="ui-header" id="ikmyhs">
+   <nav class="navbar navbar-expand-lg navbar-light px-3">
+    <div class="navbar-brand d-block d-lg-none">
+     <a href="#" class="text-decoration-none fs-3"> Shopiana </a>
+    </div>
+    <div class="hamburger2">
+     <span class="bar2"></span><span class="bar2"></span><span class="bar2"></span>
+    </div>
+    <div class="collapse navbar-collapse justify-content-center ps-1 animation pt-lg-0 pb-lg-0 pt-2 pb-4">
+     <ul class="navbar-nav w-100 flex justify-content-lg-evenly gap-lg-0 gap-4">
+      <li class="nav-item"><a aria-current="page" href="#" class="text-decoration-none">Home</a></li>
+      <li class="nav-item"><a href="#" class="text-decoration-none">Shop</a></li>
+      <li class="nav-item"><a href="#" class="text-decoration-none">Gallery</a></li>
+      <li class="nav-item"><a href="#" class="text-decoration-none">About us</a></li>
+     </ul>
+     <div class="navbar-brand d-none d-lg-block m-0">
+      <a href="#" class="text-decoration-none fs-3"> Shopiana </a>
+     </div>
+     <ul class="navbar-nav w-100 flex justify-content-lg-evenly gap-lg-0 gap-4 mt-lg-0 mt-4">
+      <li class="nav-item"><a href="#" class="text-decoration-none">Blog</a></li>
+      <li class="nav-item"><a href="#" class="text-decoration-none">Offer</a></li>
+      <li class="nav-item"><a href="#" class="text-decoration-none">Contact us</a></li>
+      <li class="nav-item"><a href="#" class="text-decoration-none">Pages</a></li>
+     </ul>
+    </div>
+   </nav>
   </div>
-  <div id="ivsahr">
-   <div role="tablist" class="tab-container">
-    <div role="tab" aria-controls="i3w79s" id="i2vp1f" class="tab">
-     <span>Tab</span>
+  <div id="icm5ug" class="container-fluid p-0">
+   <div id="carouselExampleCaptions-7847de9f-3d55-4af5-abb5-f413a7109f75" class="carousel slide">
+    <div class="carousel-indicators">
+     <div type="button" data-bs-target="#carouselExampleCaptions-7847de9f-3d55-4af5-abb5-f413a7109f75" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1" id="iryk0g" class="active"></div>
+     <div type="button" data-bs-target="#carouselExampleCaptions-7847de9f-3d55-4af5-abb5-f413a7109f75" data-bs-slide-to="1" aria-label="Slide 2" id="is9une"></div>
+     <div type="button" data-bs-target="#carouselExampleCaptions-7847de9f-3d55-4af5-abb5-f413a7109f75" data-bs-slide-to="2" aria-label="Slide 3" id="i23l8j"></div>
     </div>
-    <div role="tab" aria-controls="ik0hm5" id="i1uxw4" class="tab">
-     <span id="idinmd">Tab</span>
+    <div class="carousel-inner">
+     <div class="carousel-item active">
+      <img src="https://cdn.pixabay.com/photo/2018/01/14/23/12/nature-3082832_640.jpg" alt="..." id="ikxduw" class="d-block w-100">
+      <div class="carousel-caption d-none d-md-block h-100">
+       <div class="text-light p-3 h-100 d-flex flex-column justify-content-center align-items-center">
+        <p class="pb-3">“Testimonials provide a sense of what it's like to work with you or use your products.<br>
+          Change the text and add your own."</p>
+        <h5>Alexa young, CA</h5>
+       </div>
+      </div>
+     </div>
+     <div class="carousel-item">
+      <img src="https://cdn.pixabay.com/photo/2018/01/14/23/12/nature-3082832_640.jpg" alt="..." id="irdrm7" class="d-block w-100">
+      <div class="carousel-caption d-none d-md-block h-100">
+       <div class="text-light p-3 h-100 d-flex flex-column justify-content-center align-items-center">
+        <p class="pb-3">“Testimonials provide a sense of what it's like to work with you or use your products.<br>
+          Change the text and add your own."</p>
+        <h5>Alexa young, CA</h5>
+       </div>
+      </div>
+     </div>
+     <div class="carousel-item">
+      <img src="https://cdn.pixabay.com/photo/2018/01/14/23/12/nature-3082832_640.jpg" alt="..." id="i6vnw3" class="d-block w-100">
+      <div class="carousel-caption d-none d-md-block h-100">
+       <div class="text-light p-3 h-100 d-flex flex-column justify-content-center align-items-center">
+        <p class="pb-3">“Testimonials provide a sense of what it's like to work with you or use your products.<br>
+          Change the text and add your own."</p>
+        <h5>Alexa young, CA</h5>
+       </div>
+      </div>
+     </div>
     </div>
-    <div role="tab" aria-controls="i5sqmz" id="iywxd4" class="tab">
-     <span id="i1hkao">Tab</span>
+    <div data-bs-target="#carouselExampleCaptions-7847de9f-3d55-4af5-abb5-f413a7109f75" data-bs-slide="prev" class="carousel-control-prev">
+     <span aria-hidden="true" class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span>
+    </div>
+    <div data-bs-target="#carouselExampleCaptions-7847de9f-3d55-4af5-abb5-f413a7109f75" data-bs-slide="next" class="carousel-control-next">
+     <span aria-hidden="true" class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span>
     </div>
    </div>
-   <div class="tab-contents">
-    <div role="tabpanel" aria-labelledby="i6hlmb" hidden class="tab-content">
-     <div>
-      Tab Content
-     </div>
-    </div>
-    <div role="tabpanel" aria-labelledby="ig4q9q" hidden class="tab-content">
-     <div>
-      Tab Content
-     </div>
-    </div>
-    <div role="tabpanel" aria-labelledby="iry9sz" hidden class="tab-content">
-     <div>
-      Tab Content
-     </div>
-    </div>
-    <div role="tabpanel" id="i3w79s" aria-labelledby="i2vp1f" hidden class="tab-content">
-     <div>
-      Tab Content
-     </div>
-    </div>
-    <div role="tabpanel" id="ik0hm5" aria-labelledby="i1uxw4" hidden class="tab-content">
-     <div>
-      Tab Content
-     </div>
-    </div>
-    <div role="tabpanel" id="i5sqmz" aria-labelledby="iywxd4" hidden class="tab-content">
-     <div>
-      Tab Content
-     </div>
-    </div>
-   </div>
   </div>
-  <script>var props = {"ivsahr":{"classactive":"tab-active","selectortab":"aria-controls"}};
-          var ids = Object.keys(props).map(function(id) { return '#'+id }).join(',');
-          var els = document.querySelectorAll(ids);
-          for (var i = 0, len = els.length; i < len; i++) {
-            var el = els[i];
-            (function(t){var e,n,r=this,o=t.classactive,i=t.selectortab,s=window,a=s.history,l=s._isEditor,c="[role=tab]",u=document,p=u.body,d=u.location,h=p.matchesSelector||p.webkitMatchesSelector||p.mozMatchesSelector||p.msMatchesSelector,f=function(t,e){for(var n=t||[],r=0;r<n.length;r++)e(n[r],r)},g=function(t){return t.getAttribute(i)},m=function(t,e){return t.querySelector(e)},v=function(){return r.querySelectorAll(c)},y=function(t,e){return!l&&(t.tabIndex=e)},b=function(t){f(v(),function(t){t.className=t.className.replace(o,"").trim(),t.ariaSelected="false",y(t,"-1")}),f(r.querySelectorAll("[role=tabpanel]"),function(t){return t.hidden=!0}),t.className+=" "+o,t.ariaSelected="true",y(t,"0");var e=g(t),n=e&&m(r,"#".concat(e));n&&(n.hidden=!1)},w=m(r,".".concat(o).concat(c));(w=w||(n=(d.hash||"").replace("#",""))&&m(r,(e=i,"".concat(c,"[").concat(e,"=").concat(n,"]")))||m(r,c))&&b(w),r.addEventListener("click",function(t){var e=t.target,n=h.call(e,c);if(n||(e=function(t){var e;return f(v(),function(n){e||n.contains(t)&&(e=n)}),e}(e))&&(n=1),n&&!t.__trg&&e.className.indexOf(o)<0){t.preventDefault(),t.__trg=1,b(e);var r=g(e);try{a&&a.pushState(null,null,"#".concat(r))}catch(t){}}})}.bind(el))(props[el.id]);
+  <script>var items = document.querySelectorAll('#ikmyhs');
+          for (var i = 0, len = items.length; i < len; i++) {
+            (function(){
+const t=this.querySelectorAll(".hamburger2"),e=this.querySelectorAll(".navbar-collapse");for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){t[n].classList.toggle("active"),e[n].classList.toggle("show")})
+}.bind(items[i]))();
           }</script>
  </body>
 </html>
