--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
      </div>
      <div id="collapseId-2" class="collapse navbar-collapse">
       <div class="navbar-nav">
-       <a href="#" id="ik76a" class="nav-item nav-link active">Home</a><a href="#" id="icazj" class="nav-item nav-link">About</a>
+       <a href="#" id="ik76a" class="nav-item nav-link active">Home</a><a page="page://SwhUBug4w7zGReFQQ" name="Page 2" slug="page-2" href="//hk-ecommerce-shopiana-webbuilder-production.vercel.app/page-2.html" link-type="page" id="icazj" class="nav-item nav-link">About</a>
        <div class="nav-item dropdown">
         <a href="#" data-bs-toggle="dropdown" id="i222rh" class="nav-link dropdown-toggle">Services</a>
         <div id="i70fr" class="dropdown-menu">
