ccdf3ee6-7a88-4d4d-839b-1248cf46f400

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
      </div>
      <div id="collapseId-2" class="collapse navbar-collapse">
       <div class="navbar-nav">
-       <a href="#" id="ik76a" class="nav-item nav-link active">Home</a><a page="page://SwhUBug4w7zGReFQQ" name="Page 2" slug="page-2" href="//null/page-2.html" link-type="page" id="icazj" class="nav-item nav-link">About</a>
+       <a href="#" id="ik76a" class="nav-item nav-link active">Home</a><a page="page://SwhUBug4w7zGReFQQ" name="Page 2" slug="page-2" href="//hk-ecommerce-shopiana-webbuilder-production.vercel.app/page-2.html" link-type="page" id="icazj" class="nav-item nav-link">About</a>
        <div class="nav-item dropdown">
         <a href="#" data-bs-toggle="dropdown" id="i222rh" class="nav-link dropdown-toggle">Services</a>
         <div id="i70fr" class="dropdown-menu">
@@ -165,16 +165,16 @@
      </div>
     </div>
    </div>
-   <div class="container px-4 py-2" id="i92i7g">
+   <div id="i92i7g" class="container px-4 py-2">
     <div class="row p-2 row-cols-1">
-     <div class="col my-1" id="ixcuvo">
+     <div id="ixcuvo" class="col my-1">
       <div id="i4sxnu">
        <b><span id="iewm9g">Our Shoes collection</span></b>
        <br>
       </div>
      </div>
-     <div class="col my-1" id="iyjavw">
-      <div data-gjs-type="product-collection" class="container" id="iouejy">
+     <div id="iyjavw" class="col my-1">
+      <div data-gjs-type="product-collection" id="iouejy" class="container">
        <div data-gjs-type="product-gird" class="row relative">
         <div data-gjs-type="product-card" class="col-lg-3 col-md-4 col-sm-6 col-12 py-3 w-full">
          <div class="shadow pb-2 shopiana-bg-white">
